@@ -1,6 +1,6 @@
 PACKAGE_NAME=LilyPond
 MAJOR_VERSION=2
 MINOR_VERSION=0
-PATCH_LEVEL=0
-MY_PATCH_LEVEL=hwn1
+PATCH_LEVEL=1
+MY_PATCH_LEVEL=
 
