@@ -1,5 +1,8 @@
 2003-09-29  Han-Wen Nienhuys  <hanwen@cs.uu.nl>
 
+	* lily/bezier.cc (get_other_coordinate): change assert into
+	warning.
+
 	* lily/note-head.cc (internal_brew_molecule): make left protusion
 	smaller, to accomodate for natural sign.
 	(internal_brew_molecule): only do this when the accidental is
